# ovpncp

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: codeql.yml  package.yml  tests.yml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/observability_20260319/: index.md  metadata.json  spec.md
conductor/archive/security_fixes_20260402/: metadata.json  spec.md
conductor/tracks/observability_20260319/: plan.md
conductor/tracks/security_fixes_20260402/: index.md  plan.md
sciaiot/ovpncp/: app.py  database.py  dependencies.py  log.yml  main.py
sciaiot/ovpncp/data/: client.py  client_connection.py  network.py  restricted_network.py  server.py
sciaiot/ovpncp/middlewares/: azure_security.py  azure_storage.py
sciaiot/ovpncp/routes/: client.py  network.py  server.py
sciaiot/ovpncp/scripts/: client-connect.sh  client-disconnect.sh
sciaiot/ovpncp/utils/: iproute.py  iptables.py  openvpn.py
src/sciaiot/ovpncp/: dependencies.py  log.yml  main.py
src/sciaiot/ovpncp/data/: network.py  server.py
src/sciaiot/ovpncp/middlewares/: azure_security.py  azure_storage.py
src/sciaiot/ovpncp/routes/: client.py  network.py  server.py
src/sciaiot/ovpncp/scripts/: client-connect.sh  client-disconnect.sh
src/sciaiot/ovpncp/utils/: iproute.py  iptables.py  logging.py  openvpn.py
tests/: conftest.py  test_api.py  test_client.py  test_client_connection.py  test_iproute.py  test_iptables.py  test_logging.py  test_models.py  test_openvpn.py  test_restricted_network.py  test_security.py  test_server.py
